FIX: Filename overflow

--- a/src/Pages/Upload/Upload.module.scss
+++ b/src/Pages/Upload/Upload.module.scss
@@ -106,6 +106,9 @@
 
       .file-name {
         font-size: 1em;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
 
       .button-delete {
